# investments-portfolio-manager

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  preview-positions.html
.github/workflows/: go.yml  test.yml
backend/: .env  README.md  go.mod  go.sum
backend-python/: pyproject.toml
backend-python/app/: main.py
backend-python/app/api/: routes.py
backend-python/app/core/: config.py
backend-python/app/db/: base.py  session.py
backend-python/app/models/: asset.py  asset_metadata.py  import_job.py  position.py
backend-python/app/schemas/: portfolio.py
backend-python/app/services/: portfolio.py  quarterly_results.py
backend/cmd/api/: main.go
backend/internal/auth/: auth.go
backend/internal/config/: config.go
database/: init.sql  portfolio.db-shm  portfolio.db-wal
docs/: b3-browser-worker-plan.md  finance-tracker-plan.md
frontend/: Dockerfile  middleware.ts  next.config.ts  package-lock.json  package.json  railway.toml  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  loading.tsx  manifest.ts  page.tsx
frontend/components/: allocation-chart.tsx  bottom-nav.tsx  fii-results.tsx  monte-carlo-panel.tsx  positions-table.tsx  quarterly-results.tsx  summary-cards.tsx  top-nav.tsx  upload-panel.tsx  visibility-context.tsx
frontend/lib/: api.ts  asset-style.ts
scripts/: .env.example  com.davinomjr.investments-sync.plist  push-portfolio.sh
worker/: pyproject.toml
worker/app/: config.py  extractor.py  ibkr_extractor.py  main.py  models.py  parser.py
(+16 files in other folders)
